[tool.poetry]
name = "project-therion-api"
version = "0.1.0"
description = "API for calculating nutritional values for cat food"
authors = ["Alexandru Pavilcu <alexandrupavilcu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
